fix selection color for users with high contrast screen setting

--- a/src/components/docPage/type.scss
+++ b/src/components/docPage/type.scss
@@ -41,7 +41,7 @@
 
   h2 {
     font-size: 1.5rem;
-    margin-bottom: .75rem;
+    margin-bottom: 0.75rem;
     margin-top: 2rem;
   }
 
